--- a/faq-accordion-main/style.css
+++ b/faq-accordion-main/style.css
@@ -8,6 +8,8 @@
 }
 body{
     background: hsl(275, 100%, 97%);
+    background-image: url('faq-accordion-main/assets/images/background-pattern-desktop.svg');
+/*     background-repeat: no-repeat; */
     font-size: 16px;
     font-family: myFirstFont;
 }
