--- a/faq-accordion-main/style.css
+++ b/faq-accordion-main/style.css
@@ -55,3 +55,22 @@ body{
     justify-content: center;
     align-items: center;
 }
+@media only screen and (max-width: 375px) {
+    body {
+        background: hsl(275, 100%, 97%);
+        background-image: url('assets/images/background-pattern-mobile.svg');
+        background-repeat: no-repeat;
+    }
+        .container {
+            position: fixed;
+            max-width: 200px;
+            width: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(1.2);
+            z-index: 101;
+            padding: 2%;
+            background: hsl(0, 0%, 100%);
+            border-radius: 10px;
+        }
+}
