--- a/faq-accordion-main/style.css
+++ b/faq-accordion-main/style.css
@@ -24,7 +24,7 @@ body{
     padding: 2%;
     background:  hsl(0, 0%, 100%);
     border-radius: 10px;
-    margin: 20px;
+/*     margin: 20px; */
 }
 
 .head p{
